Um livro removido

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -293,6 +293,17 @@
 	edition = "",
 	address = "Massachussets"
 }
+
+
+@book{neves1997,
+	author = "Maria Helena de Moura Neves",
+	title = "A gramática funcional",
+	publisher = "Martins Fontes",
+	year = "1997",
+	edition = "1",
+	address = "São Paulo"
+}
+
 @book{nicolelis2011,
 	author = "Miguel Nicolelis",
 	title = "Muito além do nosso eu",
@@ -345,6 +356,18 @@
 	year = "1988",
 	edition = "",
 	address = "New York"
+}
+
+@book{saussure2004,
+	author = "Ferdinand de Saussure",
+    editor = "Simon Bouquet e Rudolf Engler"
+    translator = "Carlos Augusto Leuba Salum and Ana Lucia Franco"
+	title = "Escritos de Linguística Geral",
+	publisher = "Cultrix",
+	translator = "Antônio Chelini and José Paulo Paes and Izidoro Blikstein",
+	year = "2004",
+	edition = "1",
+	address = "São Paulo"
 }
 
 @book{saussure2006,
